update image bed

--- a/source/_posts/数据结构与算法/时间复杂度分析.md
+++ b/source/_posts/数据结构与算法/时间复杂度分析.md
@@ -15,7 +15,7 @@ date: 2018-11-11 22:04:25
 
 *   最差的情况：运行时间的下限（最多运行时间）有最复杂的输入决定；$提供了所有输入的保障时间$
 *   平均情况：随机输入的运行时间的期望，需要建立随机输入的模型$是一种评价算法表现的方法$
-*   平均时间很难测定，所以通常情况下关注最差情况下的运行时间 ![图片](https://image.aiwush.com/16310912087046.jpg)
+*   平均时间很难测定，所以通常情况下关注最差情况下的运行时间 ![图片](https://img.wush.cc/16310912087046.jpg)
 
 ### 程序用例
 
@@ -103,7 +103,7 @@ y = list(zip(*rst))[2]
 plt.plot(x, y)
 ```
 
-Output: ![截屏2020-01-09上午9.35.18](https://image.aiwush.com/16310912087076.png)
+Output: ![截屏2020-01-09上午9.35.18](https://img.wush.cc/16310912087076.png)
 
 ##### O(lgn)
 
@@ -145,7 +145,7 @@ Output:
 x = list(zip(*rst))[1]y = list(zip(*rst))[2]plt.plot(x, y)
 ```
 
-输出： ![截屏2020-01-09上午9.48.16](https://image.aiwush.com/16310912087092.png) 可以看出时间使增加的，但是增加相当缓慢，近似于一条直线，所以时间复杂度为o(lgn)是一种很好的算法.
+输出： ![截屏2020-01-09上午9.48.16](https://img.wush.cc/16310912087092.png) 可以看出时间使增加的，但是增加相当缓慢，近似于一条直线，所以时间复杂度为o(lgn)是一种很好的算法.
 
 ##### O(n)
 
@@ -169,7 +169,7 @@ Output:
 x = list(zip(*rst))[1]y = list(zip(*rst))[2]plt.plot(x, y)
 ```
 
-![-w386](https://image.aiwush.com/16310912087109.png)
+![-w386](https://img.wush.cc/16310912087109.png)
 
 ##### O(nlgn)
 
@@ -193,7 +193,7 @@ Output:
 x = list(zip(*rst))[1]y = list(zip(*rst))[2]plt.plot(x, y)
 ```
 
-![-w408](https://image.aiwush.com/16310912087127.png)
+![-w408](https://img.wush.cc/16310912087127.png)
 
 ##### O(n^2)
 
@@ -205,7 +205,7 @@ def has_duplicate(l):    start = time.time()        rst = False    for i in rang
 random_lists = random_list(100)rst = [has_duplicate(l) for l in random_lists]x = list(zip(*rst))[1]y = list(zip(*rst))[2]plt.plot(x, y)
 ```
 
-![-w381](https://image.aiwush.com/16310912087149.png)
+![-w381](https://img.wush.cc/16310912087149.png)
 
 ### 评估算法运行时间
 
@@ -242,7 +242,7 @@ random_lists = random_list(100)rst = [has_duplicate(l) for l in random_lists]x =
 
 *   一般习惯用Θ (n)记法来渐进界定算法运行时间的常数函数边界，有时，我们只希望这个常用函数代表算法运行时间的上界。
 *   尽管在最差情况下二分法搜索的运行时间为Θ (lgn)，认为在所有情况下二分法搜索的搜索时间为 Θ (lgn) 是错误的。
-*   二分法搜索的时间从来不会超过 Θ (lgn)，多数情况下其搜索时间都会少于Θ (lgn) ![-w400](https://image.aiwush.com/16310912087171.png)
+*   二分法搜索的时间从来不会超过 Θ (lgn)，多数情况下其搜索时间都会少于Θ (lgn) ![-w400](https://img.wush.cc/16310912087171.png)
 
 横坐标：Input Size 纵坐标：Time 如图，存在$n_0$,当$n\geq n_0$，存在常数k,使得$k\cdot f(n) > running time$,则称红色线为$O(f(n))$ 。简单理解即$k\cdot f(n)$为上界。
 
@@ -252,7 +252,7 @@ random_lists = random_list(100)rst = [has_duplicate(l) for l in random_lists]x =
 
 ##### Big - $\theta$
 
-*   当特别说明运行时间为 Θ (n)时： 当n变得很大的时候，算法的运行时间介于k1·n 和k2·n之间，其中k1和k2 是常数。 ![-w352](https://image.aiwush.com/16310912087194.png)
+*   当特别说明运行时间为 Θ (n)时： 当n变得很大的时候，算法的运行时间介于k1·n 和k2·n之间，其中k1和k2 是常数。 ![-w352](https://img.wush.cc/16310912087194.png)
 
 ##### Big - $\omega$
 
@@ -266,4 +266,4 @@ random_lists = random_list(100)rst = [has_duplicate(l) for l in random_lists]x =
 
 #### 记法总结
 
-![-w663](https://image.aiwush.com/16310912087221.png)
+![-w663](https://img.wush.cc/16310912087221.png)
