--- a/source/_posts/MLorDL/简简单单做个房价预测.md
+++ b/source/_posts/MLorDL/简简单单做个房价预测.md
@@ -10,7 +10,7 @@ date: 2020-03-17 22:16:06
 
 ## AUC
 
-**详细看之前博客：[模型评估与选择](https://www.aiwush.com/mldl/%e7%88%b1%e5%90%83%e8%a5%bf%e7%93%9c%e7%ac%94%e8%ae%b0%e4%b8%80%ef%bc%9a%e6%a8%a1%e5%9e%8b%e8%af%84%e4%bc%b0%e4%b8%8e%e9%80%89%e6%8b%a9/)**
+**详细看之前博客：[模型评估与选择](https://www.wush.cc/mldl/%e7%88%b1%e5%90%83%e8%a5%bf%e7%93%9c%e7%ac%94%e8%ae%b0%e4%b8%80%ef%bc%9a%e6%a8%a1%e5%9e%8b%e8%af%84%e4%bc%b0%e4%b8%8e%e9%80%89%e6%8b%a9/)**
 
 受试者工作特征(Receiver Operating Characteristic, ROC)
 
