update main domain

--- a/source/_posts/MLorDL/爱吃西瓜笔记一：模型评估与选择.md
+++ b/source/_posts/MLorDL/爱吃西瓜笔记一：模型评估与选择.md
@@ -22,7 +22,7 @@ $$
 
 ### 误差
 
-![不不不 P1](https://img.wush.cc/16311014460383.png)
+![不不不 P1](https://img.how1e.com/16311014460383.png)
 
 预测输出与样本的真实输出之间的差异称为**“误差”**
 
@@ -34,9 +34,9 @@ $$
 
 我们总是希望能够将误差最小化，最终获得准确度高，泛化能力较好的模型。这两者在一定程度是是相互冲突的。模型在测试集的准确度“太好”的时候，泛化能力会下降，在新的样本中表现不佳，称为**“过拟合” **；然而，模型训练的不够好，那么同样无法准确对样本进行预测，这个时候的泛化能力几乎毫无意义，称为**“欠拟合”**
 
-![](https://img.wush.cc/16311014461671.png)
+![](https://img.how1e.com/16311014461671.png)
 
-![截屏2020-02-28下午4.16.53](https://img.wush.cc/16311014461191.png)
+![截屏2020-02-28下午4.16.53](https://img.how1e.com/16311014461191.png)
 
 在现实任务中，我们通常有多种学习算法可供选择，甚至不同的参数配置，都会产生不同的模型，那么，我们需要选择合适的学习算法和参数配置，这就是机器学习中的**“模式选择（model selection）”**问题。
 
@@ -65,11 +65,11 @@ $$
 
 将数据集D划分为k个大小相似的互斥子集，每个子集决斗尽可能保持数据分布的一致性：
 
-![截屏2020-02-28下午4.18.44](https://img.wush.cc/16311014459782.png)
+![截屏2020-02-28下午4.18.44](https://img.how1e.com/16311014459782.png)
 
 每次使用k-1个作为训练集，剩下1个作为测试集，进行k次测试，获得k个验证结果，将平均值作为返回结果。所以交叉验证法称为“k折交叉验证”(k-fold cross validation)。如图所示为10折交叉验证过程：
 
-![截屏2020-02-28下午4.20.05](https://img.wush.cc/16311014461143.png)
+![截屏2020-02-28下午4.20.05](https://img.how1e.com/16311014461143.png)
 
 为了减少因为样本划分不同而产生的误差，我们在进行k折交叉验证的时候随机使用不同的划分重复p次，最后取p次结果的均值，称为：p次k折交叉验证。比如常见的“10次10折交叉验证”
 
@@ -83,7 +83,7 @@ $$
 
 自助法以自助采样为基础，给定包含m个数据集的样本$D$，我们对他进行采样产生数据集$D’$:每次随机从D中挑选一个样本，**拷贝**(样本保留在D中，以便下次采样依然可能被采到)放入$D'$；重复m次，获得了包含m个样本的数据集$D'$。可以得到：样本在m次采样中始终不被采到的概率为$(1-\frac{1}{m})^m$,取极限获得：
 
-![截屏2020-02-28下午4.39.03](https://img.wush.cc/16311014461095.png)
+![截屏2020-02-28下午4.39.03](https://img.how1e.com/16311014461095.png)
 
 我们可将$D'$作为训练集，$D$/$D'$作为测试集。实际评估的模型与期望评估的模型都是用m个训练样本，但是我们仍然有大约1/3的数据没有在训练集中出现，可以用于测试，这样的测试结果也被称为“包外估计”(out-of-bag estimate).
 
@@ -109,21 +109,21 @@ $$
 
 更一般的，对于数据分布和概率密度函数$p(.)$,均方差可描述为：
 
-![截屏2020-02-28下午4.56.10](https://img.wush.cc/16311014457181.png)
+![截屏2020-02-28下午4.56.10](https://img.how1e.com/16311014457181.png)
 
 ### 错误率与精度
 
 错误率：分类错误占的比例
 
-![截屏2020-02-28下午5.04.43](https://img.wush.cc/16311014458858.png)
+![截屏2020-02-28下午5.04.43](https://img.how1e.com/16311014458858.png)
 
-![截屏2020-02-28下午5.04.00](https://img.wush.cc/16311014458901.png)
+![截屏2020-02-28下午5.04.00](https://img.how1e.com/16311014458901.png)
 
 精度：分类正确占的比例
 
-![截屏2020-02-28下午5.05.00](https://img.wush.cc/16311014458798.png)
+![截屏2020-02-28下午5.05.00](https://img.how1e.com/16311014458798.png)
 
-![截屏2020-02-28下午5.05.12](https://img.wush.cc/16311014458950.png)
+![截屏2020-02-28下午5.05.12](https://img.how1e.com/16311014458950.png)
 
 这两个是最常用的性能度量.
 
@@ -149,7 +149,7 @@ $$
 
 $D_总 = TP+FP+TN+FN$
 
-![截屏2020-02-28下午7.33.59](https://img.wush.cc/16311014459000.png)
+![截屏2020-02-28下午7.33.59](https://img.how1e.com/16311014459000.png)
 
 $P = \frac{TP}{TP+FP}$
 
@@ -161,7 +161,7 @@ $R = \frac{TP}{TP+FN}$
 
 按照次顺序逐个把样本作为正例进行预测，则每次可以计算出当前的查全率、查准率，作$P-R$图
 
-![截屏2020-02-28下午7.48.02](https://img.wush.cc/16311014456641.png)
+![截屏2020-02-28下午7.48.02](https://img.how1e.com/16311014456641.png)
 
 若一个学习器的"P-R"曲线被另一个学习器的曲线完全“包住”，则可断言，后者的性能优于前者，例如图中AB优于C。但是如果交叉，那就很难进行断言孰优孰劣，例如AB。
 
@@ -171,11 +171,11 @@ $R = \frac{TP}{TP+FN}$
 
 $$F1 = \frac{2 \times P \times R}{P + R} = \frac{2 \times TP}{D_总 + TP - TN}$$
 
-> ![截屏2020-02-28下午9.02.50](https://img.wush.cc/16311014456656.png)
+> ![截屏2020-02-28下午9.02.50](https://img.how1e.com/16311014456656.png)
 > 
 > 已知数据集D，其中标记 $ y_i \in {0,1}$ （1 表示正例，0 表示反例）；设$x_i$ 的二值化预测结果为 $h_i \in {0，1}$，则
 > 
-> ![截屏2020-02-28下午9.05.41](https://img.wush.cc/16311014456669.png)
+> ![截屏2020-02-28下午9.05.41](https://img.how1e.com/16311014456669.png)
 
 调和平均：
 
@@ -209,7 +209,7 @@ $\beta<1 \to$P更重要
 
 很多时候我们有多个二分类混合矩阵，比如：
 
-![截屏2020-02-28下午8.36.40](https://img.wush.cc/16311014456683.png)
+![截屏2020-02-28下午8.36.40](https://img.how1e.com/16311014456683.png)
 
 我们希望在n个二分类混淆矩阵上综合考察P和R:
 
@@ -271,9 +271,9 @@ ROC曲线下面积(Area Under ROC Curve)
 
 两者分别定义为：
 
-![截屏2020-02-28下午9.15.10](https://img.wush.cc/16311014456698.png)
+![截屏2020-02-28下午9.15.10](https://img.how1e.com/16311014456698.png)
 
-![截屏2020-02-28下午9.15.33](https://img.wush.cc/16311014457207.png)
+![截屏2020-02-28下午9.15.33](https://img.how1e.com/16311014457207.png)
 
 对曲线的解释：
 
@@ -327,7 +327,7 @@ $$
 
 以二分类问题为例，我们可以根据任务的领域知识设定为一个**"代价矩阵"(cost matrix)**:
 
-![截屏2020-02-29下午7.21.33](https://img.wush.cc/16311014456715.png)
+![截屏2020-02-29下午7.21.33](https://img.how1e.com/16311014456715.png)
 
 $cost_{ij}$表示将第$i$类样本预测为第$j$类样品的代价，一般来说$cost_{ii}=0$，若将第0类判别为第1类所造成的损失更大，则$cost_{01}>cost_{10}$。
 
@@ -351,7 +351,7 @@ $$
 
 * 因此，对于$E(f;D；cost)$ ，若用$p$表示样例为正例的概率，则样例为反例的概率为($1-p$) ，上式可进一步写为：
   
-  ![截屏2020-02-29下午7.41.46](https://img.wush.cc/16311014457233.png)
+  ![截屏2020-02-29下午7.41.46](https://img.how1e.com/16311014457233.png)
   
   这实际上就是**期望代价**的表达式.
   
@@ -371,7 +371,7 @@ $$
 
 FNR = 1-FPR
 
-![截屏2020-02-29下午7.50.02](https://img.wush.cc/16311014456733.png)
+![截屏2020-02-29下午7.50.02](https://img.how1e.com/16311014456733.png)
 
 ## 比较检验
 
@@ -399,25 +399,25 @@ FNR = 1-FPR
 
 这个公式很容易理解，就是概率论中典型的有放回抽样问题。为了便于说明问题，这里将符号表达改一下：泛化错误率为$\varepsilon=\epsilon$的学习器，被测得测试错误率为$\hat{\varepsilon}=\hat{\epsilon}$的概率为：
 
-![截屏2020-02-29下午8.38.47](https://img.wush.cc/16311014457260.png)
+![截屏2020-02-29下午8.38.47](https://img.how1e.com/16311014457260.png)
 
 即$\hat{\varepsilon}，\varepsilon$表示变量，$\hat{\epsilon}，\hat{\epsilon}$表示变量值，其中：
 
-![截屏2020-02-29下午8.40.17](https://img.wush.cc/16311014457286.png)
+![截屏2020-02-29下午8.40.17](https://img.how1e.com/16311014457286.png)
 
 即中学时学的组合数，表示从包含m个元素的集合中不重复地抽取$\hat{\varepsilon} \times m$个元素的可能取法，中学课本中记为$C_m^{\hat{\varepsilon}\times m}$。
 
 以上公式中，若已知$\varepsilon = \epsilon$，求$\hat{\varepsilon}$为任意值时的条件概率，即后验概率$P(\hat{\varepsilon}\varepsilon=\epsilon)$；反之，若已知$\hat\varepsilon =\hat \epsilon$，求其由$\varepsilon$为任意值时导致$\hat\varepsilon =\hat \epsilon$的概率，即似然概率 。后验概率和似然概率区别在于：对于 P(果因)，若已知“因”的取值则 P(果因)为后验概率，即在知道“因”的取值后“果”发生的概率；反之若已知“果”的取值则 P(果因)为似然概率，即当前的“果”更像是由哪个“因”所导致的。特别地，
 
-![截屏2020-02-29下午8.46.06](https://img.wush.cc/16311014457314.png)
+![截屏2020-02-29下午8.46.06](https://img.how1e.com/16311014457314.png)
 
 表示最大后验概率（maximum a posteriori, MAP）估计，而
 
-![截屏2020-02-29下午8.46.33](https://img.wush.cc/16311014457342.png)
+![截屏2020-02-29下午8.46.33](https://img.how1e.com/16311014457342.png)
 
 表示最大似然估计（maximum likelihood estimation, MLE）。
 
-![截屏2020-02-29下午8.48.29](https://img.wush.cc/16311014456752.png)
+![截屏2020-02-29下午8.48.29](https://img.how1e.com/16311014456752.png)
 
 ### 交叉验证t检验
 
@@ -425,7 +425,7 @@ FNR = 1-FPR
 
 第一，该式就是对式(2.28)到式(2.28)的一个具体应用。
 
-第二，注意 2.4.2 节标题下第二行“其中 ![截屏2020-02-29下午8.49.50](https://img.wush.cc/16311014456773.png) 是在相同的第i折训练/测试集上得到的结果”，这一点在 2.2 节注解“交叉验证法的 Matlab 实现”中也特别强调了：“特别要注意的是，在对比不同算法的性能时，不同算法要使用相同的数据集划分，在留出法中也应该保证这一点”。
+第二，注意 2.4.2 节标题下第二行“其中 ![截屏2020-02-29下午8.49.50](https://img.how1e.com/16311014456773.png) 是在相同的第i折训练/测试集上得到的结果”，这一点在 2.2 节注解“交叉验证法的 Matlab 实现”中也特别强调了：“特别要注意的是，在对比不同算法的性能时，不同算法要使用相同的数据集划分，在留出法中也应该保证这一点”。
 
 ### McNemar检验
 
@@ -433,7 +433,7 @@ FNR = 1-FPR
 
 第 41 页表 2.4 称为“列联表”，看论文时偶尔能遇到该术语（第 187 页第 2 行还会出现）。列联表是统计学中双变量相关分析时常见的概念。例如，现在要调查某医院各职业（医生、护士、行政人员）和性别（男、女）的相关关系，则需要先列出列联表：
 
-![截屏2020-02-29下午8.51.30](https://img.wush.cc/16311014456793.png)
+![截屏2020-02-29下午8.51.30](https://img.how1e.com/16311014456793.png)
 
 其中男医生人数为a ，男护士人数为b ，男行政人员人数为c ，女医生人数为 d，女护士人数为e ，女行政人员人数为f ，该医院总人数（或参与调查的人数）为a+b+c+d+e+f 。有了列联表，就可以计算一些统计量，如克莱姆相关系数。
 
@@ -445,7 +445,7 @@ FNR = 1-FPR
 
 检验流程如下：
 
-![截屏2020-02-29下午8.53.08](https://img.wush.cc/16311014457370.png)
+![截屏2020-02-29下午8.53.08](https://img.how1e.com/16311014457370.png)
 
 其实算法两两之间也可以基于算法排序进行统计检验，这就是威尔科克森符号秩检验(Wilcoxon Signed-Ranks Test)，详见[Demšar, J. (2006). Statistical comparisons of classifiers over multiple data sets. _Journal of Machine Learning Research_, 7(1), 1-30.]的第 3.1.3 节。
 
@@ -467,51 +467,51 @@ FNR = 1-FPR
 
 针对式(2.37)，可简单理解如下：
 
-![截屏2020-02-29下午8.59.14](https://img.wush.cc/16311014456812.png)
+![截屏2020-02-29下午8.59.14](https://img.how1e.com/16311014456812.png)
 
 针对式(2.38) ，可简单理解如下：
 
-![截屏2020-02-29下午8.59.37](https://img.wush.cc/16311014456831.png)
+![截屏2020-02-29下午8.59.37](https://img.how1e.com/16311014456831.png)
 
 针对式(2.39) ，可简单理解如下：
 
-![截屏2020-02-29下午8.59.59](https://img.wush.cc/16311014456851.png)
+![截屏2020-02-29下午8.59.59](https://img.how1e.com/16311014456851.png)
 
 有了以上基础，接下来推导最复杂的式(2.41)：
 
 **第 1 个等号**：这是期望泛化误差的定义式，类似地，可直观地写为
 
-![截屏2020-02-29下午9.00.33](https://img.wush.cc/16311014456868.png)
+![截屏2020-02-29下午9.00.33](https://img.how1e.com/16311014456868.png)
 
 我们只能使用数据集中的标记$y_D$评估学习器泛化性能，因为真实标记y未知；
 
 **2** **个等号**：常用的配项技巧，减去$\overline{f}(x)$再加上$\overline{f}(x)$，相当于没作任何变化；
 
-**3** **个等号**：![截屏2020-02-29下午9.02.41](https://img.wush.cc/16311014456887.png)
+**3** **个等号**：![截屏2020-02-29下午9.02.41](https://img.how1e.com/16311014456887.png)
 
-![截屏2020-02-29下午9.03.06](https://img.wush.cc/16311014456906.png)
+![截屏2020-02-29下午9.03.06](https://img.how1e.com/16311014456906.png)
 
 **4** **个等号**只须证明第 3 个等号最后一项等于 0；首先
 
-![截屏2020-02-29下午9.03.29](https://img.wush.cc/16311014456928.png)
+![截屏2020-02-29下午9.03.29](https://img.how1e.com/16311014456928.png)
 
 这就是使用了数学期望的性质，对于第一项：
 
-![截屏2020-02-29下午9.03.57](https://img.wush.cc/16311014456948.png)
+![截屏2020-02-29下午9.03.57](https://img.how1e.com/16311014456948.png)
 
 其中第 1 个等号就是乘开，把式子的扩号去掉；第 2 个等号是因为期望$\overline{f}(x)$为常量（式(2.37)），
 
 因此$E_D[.]$运算不起作用；第 3 个等号使用了$\overline{f}(x)$的定义（式(2.37)）；对于第 2 项:
 
-![截屏2020-02-29下午9.05.20](https://img.wush.cc/16311014456969.png)
+![截屏2020-02-29下午9.05.20](https://img.how1e.com/16311014456969.png)
 
 其中第 1 个等号就是乘开，把式子的扩号去掉；第 2 个等号根据
 
-![截屏2020-02-29下午9.05.51](https://img.wush.cc/16311014456992.png)
+![截屏2020-02-29下午9.05.51](https://img.how1e.com/16311014456992.png)
 
 第 3 个等号中第 1 项
 
-![截屏2020-02-29下午9.06.26](https://img.wush.cc/16311014457022.png)
+![截屏2020-02-29下午9.06.26](https://img.how1e.com/16311014457022.png)
 
 根据数学期望的性质“当随机变量X和Y相互独立时，$E[XY]=E[][，而此处正如边注中所说“考虑到噪声不依赖于f ”，即$f(x;D)$与$y_D$相互独立（$y_D$等于y加上噪声，y为常量）；第 3 个等号中第 2项是因为期望$\overline{f}(x)$为常量；第 4 个等号使用了$\overline{f}(x)$的定义（式(2.37)）；
 
@@ -523,13 +523,13 @@ FNR = 1-FPR
 
 **第** **7** **个等号**只须证明第 6 个等号最后一项等于 0；由于$y\overline{f}(x)$ 均为常量，因此
 
-![截屏2020-02-29下午9.10.20](https://img.wush.cc/16311014457049.png)
+![截屏2020-02-29下午9.10.20](https://img.how1e.com/16311014457049.png)
 
 上式第 3 个等号使用了等式
 
-![截屏2020-02-29下午9.10.52](https://img.wush.cc/16311014457076.png)
+![截屏2020-02-29下午9.10.52](https://img.how1e.com/16311014457076.png)
 
-这是由于在式(2.40)下方提到：为便于讨论，假定噪声期望为零，即![截屏2020-02-29下午9.11.23](https://img.wush.cc/16311014457104.png),其中y为x的真实标记，是一个常量；因此有![截屏2020-02-29下午9.12.12](https://img.wush.cc/16311014457130.png)。到此为止，式(2.41)推导结束。
+这是由于在式(2.40)下方提到：为便于讨论，假定噪声期望为零，即![截屏2020-02-29下午9.11.23](https://img.how1e.com/16311014457104.png),其中y为x的真实标记，是一个常量；因此有![截屏2020-02-29下午9.12.12](https://img.how1e.com/16311014457130.png)。到此为止，式(2.41)推导结束。
 
 针对式(2.42)，就是将式(2.38)、式(2.39)和式(2.40)代入到式(2.41)最后的表达式即可。
 
@@ -537,6 +537,6 @@ FNR = 1-FPR
 
 2.9 中横坐标表示的训练程度可以理解为模型的复杂程度。模型越简单（比如直线）其表达能力越弱，反之模型越复杂（比如 n 阶多项式）其表达能力越强。类似于图 2.9 的关系还有下图所示的训练误差(i.e., in-sample error)、模型复杂度(i.e., model complexity)和泛化误差(i.e., out-of-sample error)三者随着 VC 维（参见 12.4 节）的变化趋势关系
 
-![截屏2020-02-29下午8.56.13](https://img.wush.cc/16311014457157.png)
+![截屏2020-02-29下午8.56.13](https://img.how1e.com/16311014457157.png)
 
 实际上，上图与图 2.9 表示的问题本来也就是一回事……
