--- a/source/_posts/Python/文件名称批量修改.md
+++ b/source/_posts/Python/文件名称批量修改.md
@@ -10,7 +10,7 @@ date: 2020-02-11 22:17:19
 
 今天整理云备份资料，发现下载的资料的文件名太长了，导致重要信息被隐藏，于是决定重新处理一下文件名。
 
-![-w366](https://img.how1e.com/16311031554393.png)
+![-w366](https://img.wush.cc/16311031554393.png)
 
 ### 读取文件名
 
@@ -23,7 +23,7 @@ for filename in filename_list:
     print(str(filename))
 ```
 
-我们使用os包来导入文件，使用listdir遍历指定文件地址内的所有文件。 ![-w1237](https://img.how1e.com/16311031554414.png)
+我们使用os包来导入文件，使用listdir遍历指定文件地址内的所有文件。 ![-w1237](https://img.wush.cc/16311031554414.png)
 
 ### 分析文件名
 
@@ -74,4 +74,4 @@ for filename in filename_list:
     os.rename(dirfile_name + filename, dirfile_name + final_filename)
 ```
 
-我们注意到文件名称已经修改完成： ![-w371](https://img.how1e.com/16311031554442.png)
+我们注意到文件名称已经修改完成： ![-w371](https://img.wush.cc/16311031554442.png)
