--- a/source/_posts/爱吃西瓜笔记一：模型评估与选择.md
+++ b/source/_posts/爱吃西瓜笔记一：模型评估与选择.md
@@ -12,13 +12,9 @@ tags:
   - 错误率
 categories:
   - ML&DL
-permalink: /post/love-watermelon-notes-1-model-evaluation-and-selection-zwemtc.html
 comments: true
 toc: true
 ---
-
-
-
 ## 经验误差与过拟合
 
 假设有m个样本，a个分类出现了错误，那么错误率$E$为
@@ -34,20 +30,20 @@ $$
 ### 误差
 
 ![不不不 P1](https://img.wush.cc/16311014460383.png?imageView2/0/format/webp/q/80)
-预测输出与样本的真实输出之间的差异称为<span style="font-weight: bold;" class="bold"> “误差” </span>
+预测输出与样本的真实输出之间的差异称为`<span style="font-weight: bold;" class="bold">` “误差” 
 学习器在训练集上的误差称为“训练误差”或者“经验误差”
 在新样本上的误差称为“泛化误差”
 
 ### 过拟合与欠拟合
 
-我们总是希望能够将误差最小化，最终获得准确度高，泛化能力较好的模型。这两者在一定程度是是相互冲突的。模型在测试集的准确度“太好”的时候，泛化能力会下降，在新的样本中表现不佳，称为<span style="font-weight: bold;" class="bold">“过拟合”  </span>；然而，模型训练的不够好，那么同样无法准确对样本进行预测，这个时候的泛化能力几乎毫无意义，称为<span style="font-weight: bold;" class="bold">“欠拟合”</span>
+我们总是希望能够将误差最小化，最终获得准确度高，泛化能力较好的模型。这两者在一定程度是是相互冲突的。模型在测试集的准确度“太好”的时候，泛化能力会下降，在新的样本中表现不佳，称为`<span style="font-weight: bold;" class="bold">`“过拟合”  ；然而，模型训练的不够好，那么同样无法准确对样本进行预测，这个时候的泛化能力几乎毫无意义，称为`<span style="font-weight: bold;" class="bold">`“欠拟合”
 ![](https://img.wush.cc/16311014461671.png?imageView2/0/format/webp/q/80)
 ![截屏2020-02-28下午4.16.53](https://img.wush.cc/16311014461191.png?imageView2/0/format/webp/q/80)
-在现实任务中，我们通常有多种学习算法可供选择，甚至不同的参数配置，都会产生不同的模型，那么，我们需要选择合适的学习算法和参数配置，这就是机器学习中的<span style="font-weight: bold;" class="bold"> “模式选择（model selection）” </span>问题。
+在现实任务中，我们通常有多种学习算法可供选择，甚至不同的参数配置，都会产生不同的模型，那么，我们需要选择合适的学习算法和参数配置，这就是机器学习中的`<span style="font-weight: bold;" class="bold">` “模式选择（model selection）” 问题。
 
 ## 评估方法
 
-通过<span style="font-weight: bold;" class="bold"> “测试集(Testing Set)” </span>来测试学习器对新样本的判断能力，然后把测试集的“测试误差”近似看做泛化误差。
+通过`<span style="font-weight: bold;" class="bold">` “测试集(Testing Set)” 来测试学习器对新样本的判断能力，然后把测试集的“测试误差”近似看做泛化误差。
 测试样本要满足：
 
 * 测试样本从样本真实分布中独立同分布采样而得
@@ -59,7 +55,7 @@ $$
 以二分类举例，假设D=1000,S=700,那么T=300
 经过测试集测试，假设有90个样本出现错误，那么$TestingError = \frac{90}{300} \times 100\% = 30\%$，相应的精度为$70\%$。
 在进行划分时，要注意数据集中尽量包含各种类别的数据，还要注意多次划分，重复训练评估。因为我们每次划分训练出来的结果都可能存在差异，所以单次评估一般是不可靠的，需要进行多次评估取平均值。
-对于数据集，一般取<span style="font-weight: bold;" class="bold">$\frac{2}{3} - \frac{4}{5}$</span>作为训练集，剩余部分作为测试集。
+对于数据集，一般取`<span style="font-weight: bold;" class="bold">`$\frac{2}{3} - \frac{4}{5}$作为训练集，剩余部分作为测试集。
 
 ### 交叉验证法
 
@@ -75,7 +71,7 @@ $$
 
 ### 自助法
 
-自助法以自助采样为基础，给定包含m个数据集的样本$D$，我们对他进行采样产生数据集$D’$:每次随机从D中挑选一个样本，<span style="font-weight: bold;" class="bold">拷贝</span>(样本保留在D中，以便下次采样依然可能被采到)放入$D'$；重复m次，获得了包含m个样本的数据集$D'$。可以得到：样本在m次采样中始终不被采到的概率为$(1-\frac{1}{m})^m$,取极限获得：
+自助法以自助采样为基础，给定包含m个数据集的样本$D$，我们对他进行采样产生数据集$D’$:每次随机从D中挑选一个样本，`<span style="font-weight: bold;" class="bold">`拷贝(样本保留在D中，以便下次采样依然可能被采到)放入$D'$；重复m次，获得了包含m个样本的数据集$D'$。可以得到：样本在m次采样中始终不被采到的概率为$(1-\frac{1}{m})^m$,取极限获得：
 ![截屏2020-02-28下午4.39.03](https://img.wush.cc/16311014461095.png?imageView2/0/format/webp/q/80)
 我们可将$D'$作为训练集，$D$/$D'$作为测试集。实际评估的模型与期望评估的模型都是用m个训练样本，但是我们仍然有大约1/3的数据没有在训练集中出现，可以用于测试，这样的测试结果也被称为“包外估计”(out-of-bag estimate).
 这种方法适用于数据量较小，难以有效划分的情况下，此外，对集成学习等方法有很大的帮助。
@@ -129,7 +125,7 @@ $$
 > ![截屏2020-02-28下午7.48.02](https://img.wush.cc/16311014456641.png?imageView2/0/format/webp/q/80)
 > 若一个学习器的"P-R"曲线被另一个学习器的曲线完全“包住”，则可断言，后者的性能优于前者，例如图中AB优于C。但是如果交叉，那就很难进行断言孰优孰劣，例如AB。
 > 平衡点(Break-Even Point, BEP)就是综合考虑P、R的性能度量，他是$P = R$时的取值，例如图中C的$BEP=0.64$，A的$BEP = 0.8$基于平衡点的比较，可以认为A优于B。
-> <span style="font-weight: bold;" class="bold">但是</span>,EBP还是过于简化，更常用的是F1度量：
+> `<span style="font-weight: bold;" class="bold">`但是,EBP还是过于简化，更常用的是F1度量：
 
 $$
 F1 = \frac{2 \times P \times R}{P + R} = \frac{2 \times TP}{D_总 + TP - TN}
@@ -207,7 +203,7 @@ ROC曲线下面积(Area Under ROC Curve)
   ![截屏2020-02-28下午9.15.10](https://img.wush.cc/16311014456698.png?imageView2/0/format/webp/q/80)
   ![截屏2020-02-28下午9.15.33](https://img.wush.cc/16311014457207.png?imageView2/0/format/webp/q/80)
   对曲线的解释：
-  先解释两种特殊情形，即“<span style="font-weight: bold;" class="bold">对角线对应于‘随机猜测’模型，而点(0,1)则对应于将所有正例排在所有反例之前的‘理想模型’</span> ”。
+  先解释两种特殊情形，即“`<span style="font-weight: bold;" class="bold">`对角线对应于‘随机猜测’模型，而点(0,1)则对应于将所有正例排在所有反例之前的‘理想模型’ ”。
   看一下 ROC 绘图过程：
   给定$m^+$个正例和$m^-$个反例，根据学习器预测结果对样例进行排序，然后把分类阈值设为最大，即把所有样例均预测为反例，此时真正例率和假正例率均为 0（无样例被预测为正例，因此真正例 TP 和假正例 FP 均为 0，根据公式可知真正例率 TPR 和假正例率 FPR 均为 0，在坐标(0,0)处标记一个点，然后将分类阙值依次设为每个样例的预测值，依次将每个样例划分为正例，设前一个标记点坐标为(x,y)：
   若当前为真正例,坐标为$(x,y+\frac{1}{m^+})$
@@ -240,20 +236,20 @@ $$
 ### 代价敏感错误率与代价曲线
 
 现实任务中，不同的错误会产生不同的后果。为了权衡不同类型错误所造成的不同损失，可为错误赋予“非均等代价”（unequal cost）
-以二分类问题为例，我们可以根据任务的领域知识设定为一个<span style="font-weight: bold;" class="bold">"代价矩阵"(cost matrix) </span>:<span style="font-weight: bold;" class="bold">​</span>$cost_{ij}$<span style="font-weight: bold;" class="bold">​</span>表示将第<span style="font-weight: bold;" class="bold">​</span>$i$<span style="font-weight: bold;" class="bold">​</span>类样本预测为第<span style="font-weight: bold;" class="bold">​</span>$j$<span style="font-weight: bold;" class="bold">​</span>类样品的代价，一般来说<span style="font-weight: bold;" class="bold">​</span>$cost_{ii}=0$<span style="font-weight: bold;" class="bold">​ </span>，若将第0类判别为第1类所造成的损失更大，则<span style="font-weight: bold;" class="bold">​</span>$cost_{01}&gt;cost_{10}$<span style="font-weight: bold;" class="bold">​ </span>。<span style="font-weight: bold;" class="bold">​</span><span style="font-weight: bold;" class="bold">损失程度相差越大，</span><span style="font-weight: bold;" class="bold">​</span><span style="font-weight: bold;" class="bold">$cost_{01}, cost_{10}$</span><span style="font-weight: bold;" class="bold">​</span><span style="font-weight: bold;" class="bold">值的差别越大</span><span style="font-weight: bold;" class="bold">​</span>前面介绍的性能度量大都隐式假设了均等代价，并没有考虑不同错误造成的不同后果。在非均等代价下，我们所希望的不再是简单地最小化错误次数，而是希望最小化<span style="font-weight: bold;" class="bold">“总体代价”(total cost) </span>。<span style="font-weight: bold;" class="bold">​</span>我们将上表中第0类作为正类，第1类作为反类，另<span style="font-weight: bold;" class="bold">​</span>$D^+$<span style="font-weight: bold;" class="bold">​</span>与<span style="font-weight: bold;" class="bold">​</span>$D^-$<span style="font-weight: bold;" class="bold">​</span>分别表示D的正例子集和反例子集，则<span style="font-weight: bold;" class="bold">“代价敏感错误率”(cost-sensitive)</span>为:
+以二分类问题为例，我们可以根据任务的领域知识设定为一个`<span style="font-weight: bold;" class="bold">`"代价矩阵"(cost matrix) :`<span style="font-weight: bold;" class="bold">`$cost_{ij}$`<span style="font-weight: bold;" class="bold">`表示将第`<span style="font-weight: bold;" class="bold">`$i$`<span style="font-weight: bold;" class="bold">`类样本预测为第`<span style="font-weight: bold;" class="bold">`$j$`<span style="font-weight: bold;" class="bold">`类样品的代价，一般来说`<span style="font-weight: bold;" class="bold">`$cost_{ii}=0$`<span style="font-weight: bold;" class="bold">` ，若将第0类判别为第1类所造成的损失更大，则`<span style="font-weight: bold;" class="bold">`$cost_{01}&gt;cost_{10}$`<span style="font-weight: bold;" class="bold">` 。`<span style="font-weight: bold;" class="bold"><span style="font-weight: bold;" class="bold">`损失程度相差越大，`<span style="font-weight: bold;" class="bold"><span style="font-weight: bold;" class="bold">`$cost_{01}, cost_{10}$`<span style="font-weight: bold;" class="bold"><span style="font-weight: bold;" class="bold">`值的差别越大`<span style="font-weight: bold;" class="bold">`前面介绍的性能度量大都隐式假设了均等代价，并没有考虑不同错误造成的不同后果。在非均等代价下，我们所希望的不再是简单地最小化错误次数，而是希望最小化`<span style="font-weight: bold;" class="bold">`“总体代价”(total cost) 。`<span style="font-weight: bold;" class="bold">`我们将上表中第0类作为正类，第1类作为反类，另`<span style="font-weight: bold;" class="bold">`$D^+$`<span style="font-weight: bold;" class="bold">`与`<span style="font-weight: bold;" class="bold">`$D^-$`<span style="font-weight: bold;" class="bold">`分别表示D的正例子集和反例子集，则`<span style="font-weight: bold;" class="bold">`“代价敏感错误率”(cost-sensitive)为:
 
 $$
 E(f;D;cost)=\frac{1}{m}(\sum_{x_i \in D^+}Ⅱ(f(x_i) \not =y_i)\times cost_{01}+\sum_{x_i \in D^-}Ⅱ(f(x_i) \not =y_i)\times cost_{10})
 $$
 
 其中$m^+$和$m^-$表示正例子集和反例子集的样本个数。本式已经假定了样例集D中样本的类别信息已知，其中：
-*$\frac{1}{m^+}\sum_{x_i\in D^+}Ⅱ(f(x_i \not= y_i))$表示正例子集预测错误样本所占比例，即<span style="font-weight: bold;" class="bold">假反例率FNR</span>
-*$\frac{1}{m^-}\sum_{x_i\in D^-}Ⅱ(f(x_i \not= y_i))$表示反例子集预测错误样本所占比例，即<span style="font-weight: bold;" class="bold">假正例率FPR</span>
+*$\frac{1}{m^+}\sum_{x_i\in D^+}Ⅱ(f(x_i \not= y_i))$表示正例子集预测错误样本所占比例，即`<span style="font-weight: bold;" class="bold">`假反例率FNR
+*$\frac{1}{m^-}\sum_{x_i\in D^-}Ⅱ(f(x_i \not= y_i))$表示反例子集预测错误样本所占比例，即`<span style="font-weight: bold;" class="bold">`假正例率FPR
 
 * 因此，对于$E(f;D；cost)$，若用$p$表示样例为正例的概率，则样例为反例的概率为($1-p$) ，上式可进一步写为：
   ![截屏2020-02-29下午7.41.46](https://img.wush.cc/16311014457233.png?imageView2/0/format/webp/q/80)
-  这实际上就是<span style="font-weight: bold;" class="bold">期望代价</span>的表达式.
-  在非均等代价下，ROC曲线不能直接反应学习器的期望总体代价，而 <span style="font-weight: bold;" class="bold">“代价曲线”(cost surve)</span> 可以实现。代价曲线的横轴取值为$[0,1]$的正例概率代价：
+  这实际上就是`<span style="font-weight: bold;" class="bold">`期望代价的表达式.
+  在非均等代价下，ROC曲线不能直接反应学习器的期望总体代价，而 `<span style="font-weight: bold;" class="bold">`“代价曲线”(cost surve) 可以实现。代价曲线的横轴取值为$[0,1]$的正例概率代价：
 
 $$
 P(+)cost = \frac{p \times cost_{01}}{p \times cost_{01}+(1-p)\times cost_{10}}
@@ -277,14 +273,14 @@ FNR = 1-FPR
 * 测试集上的性能与测试集本身有很大的关系，测试集不同，最终结果一般也不同。
 * 很多机器学习算法本身有一定的随机性，即使使用相同参数设置同一个训练集多次运行，结果也会不同。
   简单来说，就是通过 评估方法，得到每个算法/模型在各个性能度量上的表现，但这些值实际上是一个随机变量，因此并不能简单用比较大小来说明多个算法的优劣。
-  如果不做算法研究，不需要写论文对比多种算法的性能，这部分可以暂时跳过(显然我是跳不过了)；另外，有关检测变量的公式，并不需要清楚是怎么来的（这是统计学家要做的事情），我们只需知道如何由测试结果计算出这些检测变量，并根据检测变量服从的分布类型得到临界值，然后将检测变量与临界值对比即可。在这一部分中，将主要进行书中公式的注解，相当一部分内容来自 <span style="font-weight: bold;" class="bold">《机器学习（西瓜书）注解》</span> 。
-   <span style="font-weight: bold;" class="bold">，所以统计检验假设(hypothesis test)</span> 为我们进行学习器性能比较提供了重要依据。
+  如果不做算法研究，不需要写论文对比多种算法的性能，这部分可以暂时跳过(显然我是跳不过了)；另外，有关检测变量的公式，并不需要清楚是怎么来的（这是统计学家要做的事情），我们只需知道如何由测试结果计算出这些检测变量，并根据检测变量服从的分布类型得到临界值，然后将检测变量与临界值对比即可。在这一部分中，将主要进行书中公式的注解，相当一部分内容来自 `<span style="font-weight: bold;" class="bold">`《机器学习（西瓜书）注解》 。
+  `<span style="font-weight: bold;" class="bold">`，所以统计检验假设(hypothesis test) 为我们进行学习器性能比较提供了重要依据。
   在本部分中，默认使用错误率$\epsilon$作为性能度量。
 
 ### 假设检验
 
 现实任务中，我们并不知道学习器的泛化错误率，只能获知其测试错误率$\hat{\epsilon}$，泛化错误率与测试错误率未必相同，但是二者接近的可能性比较大，因此可以通过测试错误率估推出泛化错误率的分布。
-<span style="font-weight: bold;" class="bold">式</span>  <span style="font-weight: bold;" class="bold">(2.26)</span>  <span style="font-weight: bold;" class="bold">的解释</span>
+`<span style="font-weight: bold;" class="bold">`式  `<span style="font-weight: bold;" class="bold">`(2.26)  `<span style="font-weight: bold;" class="bold">`的解释
 这个公式很容易理解，就是概率论中典型的有放回抽样问题。为了便于说明问题，这里将符号表达改一下：泛化错误率为$\varepsilon=\epsilon$的学习器，被测得测试错误率为$\hat{\varepsilon}=\hat{\epsilon}$的概率为：
 ![截屏2020-02-29下午8.38.47](https://img.wush.cc/16311014457260.png?imageView2/0/format/webp/q/80)
 即$\hat{\varepsilon}，\varepsilon$表示变量，$\hat{\epsilon}，\hat{\epsilon}$表示变量值，其中：
@@ -299,13 +295,13 @@ FNR = 1-FPR
 
 ### 交叉验证t检验
 
-<span style="font-weight: bold;" class="bold">式</span>  <span style="font-weight: bold;" class="bold">(2.31)</span>  <span style="font-weight: bold;" class="bold">的解释</span>
+`<span style="font-weight: bold;" class="bold">`式  `<span style="font-weight: bold;" class="bold">`(2.31)  `<span style="font-weight: bold;" class="bold">`的解释
 第一，该式就是对式(2.28)到式(2.28)的一个具体应用。
 第二，注意 2.4.2 节标题下第二行“其中 ![截屏2020-02-29下午8.49.50](https://img.wush.cc/16311014456773.png?imageView2/0/format/webp/q/80) 是在相同的第i折训练/测试集上得到的结果”，这一点在 2.2 节注解“交叉验证法的 Matlab 实现”中也特别强调了：“特别要注意的是，在对比不同算法的性能时，不同算法要使用相同的数据集划分，在留出法中也应该保证这一点”。
 
 ### McNemar检验
 
-<span style="font-weight: bold;" class="bold">列联表</span>  <span style="font-weight: bold;" class="bold">(contingency table)</span>  <span style="font-weight: bold;" class="bold">的解释</span>
+`<span style="font-weight: bold;" class="bold">`列联表  `<span style="font-weight: bold;" class="bold">`(contingency table)  `<span style="font-weight: bold;" class="bold">`的解释
 第 41 页表 2.4 称为“列联表”，看论文时偶尔能遇到该术语（第 187 页第 2 行还会出现）。列联表是统计学中双变量相关分析时常见的概念。例如，现在要调查某医院各职业（医生、护士、行政人员）和性别（男、女）的相关关系，则需要先列出列联表：
 ![截屏2020-02-29下午8.51.30](https://img.wush.cc/16311014456793.png?imageView2/0/format/webp/q/80)
 其中男医生人数为a ，男护士人数为b ，男行政人员人数为c ，女医生人数为 d，女护士人数为e ，女行政人员人数为f ，该医院总人数（或参与调查的人数）为a+b+c+d+e+f 。有了列联表，就可以计算一些统计量，如克莱姆相关系数。
@@ -338,13 +334,13 @@ FNR = 1-FPR
 针对式(2.39) ，可简单理解如下：
 ![截屏2020-02-29下午8.59.59](https://img.wush.cc/16311014456851.png?imageView2/0/format/webp/q/80)
 有了以上基础，接下来推导最复杂的式(2.41)：
-<span style="font-weight: bold;" class="bold">第 1 个等号</span>：这是期望泛化误差的定义式，类似地，可直观地写为
+`<span style="font-weight: bold;" class="bold">`第 1 个等号：这是期望泛化误差的定义式，类似地，可直观地写为
 ![截屏2020-02-29下午9.00.33](https://img.wush.cc/16311014456868.png?imageView2/0/format/webp/q/80)
 我们只能使用数据集中的标记$y_D$评估学习器泛化性能，因为真实标记y未知；
-<span style="font-weight: bold;" class="bold">2</span> <span style="font-weight: bold;" class="bold">个等号</span>：常用的配项技巧，减去$\overline{f}(x)$再加上$\overline{f}(x)$，相当于没作任何变化；
-<span style="font-weight: bold;" class="bold">3</span> <span style="font-weight: bold;" class="bold">个等号</span>：![截屏2020-02-29下午9.02.41](https://img.wush.cc/16311014456887.png?imageView2/0/format/webp/q/80)
+`<span style="font-weight: bold;" class="bold">`2 `<span style="font-weight: bold;" class="bold">`个等号：常用的配项技巧，减去$\overline{f}(x)$再加上$\overline{f}(x)$，相当于没作任何变化；
+`<span style="font-weight: bold;" class="bold">`3 `<span style="font-weight: bold;" class="bold">`个等号：![截屏2020-02-29下午9.02.41](https://img.wush.cc/16311014456887.png?imageView2/0/format/webp/q/80)
 ![截屏2020-02-29下午9.03.06](https://img.wush.cc/16311014456906.png?imageView2/0/format/webp/q/80)
-<span style="font-weight: bold;" class="bold">4</span> <span style="font-weight: bold;" class="bold">个等号</span>只须证明第 3 个等号最后一项等于 0；首先
+`<span style="font-weight: bold;" class="bold">`4 `<span style="font-weight: bold;" class="bold">`个等号只须证明第 3 个等号最后一项等于 0；首先
 ![截屏2020-02-29下午9.03.29](https://img.wush.cc/16311014456928.png?imageView2/0/format/webp/q/80)
 这就是使用了数学期望的性质，对于第一项：
 ![截屏2020-02-29下午9.03.57](https://img.wush.cc/16311014456948.png?imageView2/0/format/webp/q/80)
@@ -357,9 +353,9 @@ FNR = 1-FPR
 ![截屏2020-02-29下午9.06.26](https://img.wush.cc/16311014457022.png?imageView2/0/format/webp/q/80)
 根据数学期望的性质“当随机变量X和Y相互独立时，$E[XY]=E[][，而此处正如边注中所说“考虑到噪声不依赖于f ”，即$f(x;D)$与$y_D$相互独立（$y_D$等于y加上噪声，y为常量）；第 3 个等号中第 2项是因为期望$\overline{f}(x)$为常量；第 4 个等号使用了$\overline{f}(x)$的定义（式(2.37)）；
 综上所述：式(2.41)中第 3 个等号最后一项等于 0，代入即得第 4 个等号；
-<span style="font-weight: bold;" class="bold">第</span> <span style="font-weight: bold;" class="bold">5</span> <span style="font-weight: bold;" class="bold">个等号</span>类似于第 2 个等号，对第 2 项使用了配项技巧；
-<span style="font-weight: bold;" class="bold">第</span> <span style="font-weight: bold;" class="bold">6</span> <span style="font-weight: bold;" class="bold">个等号</span>类似于第 3 个等号，对第 2 项使用了性质$E[X+Y]=E[]E[[[
-<span style="font-weight: bold;" class="bold">第</span> <span style="font-weight: bold;" class="bold">7</span> <span style="font-weight: bold;" class="bold">个等号</span>只须证明第 6 个等号最后一项等于 0；由于$y\overline{f}(x)$均为常量，因此
+`<span style="font-weight: bold;" class="bold">`第 `<span style="font-weight: bold;" class="bold">`5 `<span style="font-weight: bold;" class="bold">`个等号类似于第 2 个等号，对第 2 项使用了配项技巧；
+`<span style="font-weight: bold;" class="bold">`第 `<span style="font-weight: bold;" class="bold">`6 `<span style="font-weight: bold;" class="bold">`个等号类似于第 3 个等号，对第 2 项使用了性质$E[X+Y]=E[]E[[[
+`<span style="font-weight: bold;" class="bold">`第 `<span style="font-weight: bold;" class="bold">`7 `<span style="font-weight: bold;" class="bold">`个等号只须证明第 6 个等号最后一项等于 0；由于$y\overline{f}(x)$均为常量，因此
 ![截屏2020-02-29下午9.10.20](https://img.wush.cc/16311014457049.png?imageView2/0/format/webp/q/80)
 上式第 3 个等号使用了等式
 ![截屏2020-02-29下午9.10.52](https://img.wush.cc/16311014457076.png?imageView2/0/format/webp/q/80)
