--- a/source/_posts/简简单单做个房价预测.md
+++ b/source/_posts/简简单单做个房价预测.md
@@ -10,16 +10,12 @@ tags:
   - 数据可视化
 categories:
   - ML&DL
-permalink: /post/simply-make-a-house-price-forecast-z1rqbbv.html
 comments: true
 toc: true
 ---
-
-
-
 ## AUC
 
-<span style="font-weight: bold;" class="bold">详细看之前博客：</span>​<span style="font-weight: bold;" class="bold">[模型评估与选择](https://this.iswsh.com/MLorDL/%e7%88%b1%e5%90%83%e8%a5%bf%e7%93%9c%e7%ac%94%e8%ae%b0%e4%b8%80%ef%bc%9a%e6%a8%a1%e5%9e%8b%e8%af%84%e4%bc%b0%e4%b8%8e%e9%80%89%e6%8b%a9/)</span>
+`<span style="font-weight: bold;" class="bold">`详细看之前博客：`<span style="font-weight: bold;" class="bold">`[模型评估与选择](https://this.iswsh.com/MLorDL/%e7%88%b1%e5%90%83%e8%a5%bf%e7%93%9c%e7%ac%94%e8%ae%b0%e4%b8%80%ef%bc%9a%e6%a8%a1%e5%9e%8b%e8%af%84%e4%bc%b0%e4%b8%8e%e9%80%89%e6%8b%a9/)
 受试者工作特征(Receiver Operating Characteristic, ROC)
 ROC曲线下面积(Area Under ROC Curve)
 很多学习器是微测试样本产生一个实值或者概率预测，然后将这个预测值与一个分类阈值(threshold)进行比较，若大于阈值则为正例，小于阈值则为反例。例如logistic回归中使用sigmod函数将输出限制在0-1，大于0.5为True，反之则为False。
@@ -34,7 +30,7 @@ ROC曲线下面积(Area Under ROC Curve)
   ![截屏2020-02-28下午9.15.10](https://img.wush.cc/16311019121156.png?imageView2/0/format/webp/q/80)
   ![截屏2020-02-28下午9.15.33](https://img.wush.cc/16311019121179.png?imageView2/0/format/webp/q/80)
   对曲线的解释：
-  先解释两种特殊情形，即“<span style="font-weight: bold;" class="bold">对角线对应于‘随机猜测’模型，而点(0,1)则对应于将所有正例排在所有反例之前的‘理想模型’</span> ”。
+  先解释两种特殊情形，即“`<span style="font-weight: bold;" class="bold">`对角线对应于‘随机猜测’模型，而点(0,1)则对应于将所有正例排在所有反例之前的‘理想模型’ ”。
   看一下 ROC 绘图过程：
   给定$m^+$个正例和$m^-$个反例，根据学习器预测结果对样例进行排序，然后把分类阈值设为最大，即把所有样例均预测为反例，此时真正例率和假正例率均为 0（无样例被预测为正例，因此真正例 TP 和假正例 FP 均为 0，根据公式可知真正例率 TPR 和假正例率 FPR 均为 0，在坐标(0,0)处标记一个点，然后将分类阙值依次设为每个样例的预测值，依次将每个样例划分为正例，设前一个标记点坐标为(x,y)：
   若当前为真正例,坐标为$(x,y+\frac{1}{m^+})$
